Documentacion e importacion de stats en dashboard
